force-app/main/default/objects/BGCK__Question_Type__c/BGCK__Question_Type__c.object-meta.xml
<CustomObject>
    <label>Question Type</label>
    <nameField>
        <label>Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>