force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__Checklist_Version__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Checklist_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Checklist Version</label>
    <referenceTo>BGCK__Checklist_Version__c</referenceTo>
    <relationshipLabel>Question Types</relationshipLabel>
    <relationshipName>Question_Types</relationshipName>
    <type>Lookup</type>
</CustomField>