force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Default_Value__c</fullName>
    <label>Default Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>