force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Fieldset_Name__c</fullName>
    <description>For Record List questions, the name of the fieldset to be used when the user is creating or editing records within the checklist.</description>
    <label>Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>