force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__hasChoices__c.field-meta.xml
<CustomField>
    <fullName>BGCK__hasChoices__c</fullName>
    <formula>IF( ISPICKVAL(BGCK__Type__c, "Radio Button"), true, (IF( ISPICKVAL(BGCK__Type__c, "Picklist"), true, (IF( ISPICKVAL(BGCK__Type__c, "Checkbox - Horizontal"), true, (IF( ISPICKVAL(BGCK__Type__c, "Checkbox - Vertical"), true, false)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Choices</label>
    <type>Checkbox</type>
</CustomField>