force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__Name_Number_Currency__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Name_Number_Currency__c</fullName>
    <formula>IF( ISPICKVAL(BGCK__Type__c, "Number - Currency"), VALUE(Name), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name (Number - Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>