force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__Name_Number_Integer__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Name_Number_Integer__c</fullName>
    <formula>IF( ISPICKVAL(BGCK__Type__c, "Number - Integer"), VALUE(Name), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name (Number - Integer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>