force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__Name_Number_Percent__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Name_Number_Percent__c</fullName>
    <formula>IF( ISPICKVAL(BGCK__Type__c, "Number - Percent"), VALUE(Name), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name (Number - Percent)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>