force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Object_Name__c</fullName>
    <description>For Record List questions, the API name of the object to be listed</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>