force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__Preview_Field_Count__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Preview_Field_Count__c</fullName>
    <description>The number of fields out of the fieldset to show in the table view</description>
    <label>Preview Field Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>