force-app/main/default/objects/BGCK__Question_Type__c/fields/BGCK__Type__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Radio Button</fullName>
            </value>
            <value>
                <fullName>Checkbox - Horizontal</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Checkbox - Vertical</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Number - Percent</fullName>
            </value>
            <value>
                <fullName>Number - Integer</fullName>
            </value>
            <value>
                <fullName>Number - Currency</fullName>
            </value>
            <value>
                <fullName>Phone Number</fullName>
            </value>
            <value>
                <fullName>Record List</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Number - Decimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>