force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Checkbox_Vertical.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Checkbox_Vertical</fullName>
    <active>false</active>
    <label>Checkbox - Vertical</label>
</RecordType>