force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Date.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Date</fullName>
    <active>false</active>
    <label>Date</label>
</RecordType>