force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Label.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Label</fullName>
    <active>false</active>
    <label>Label</label>
</RecordType>