force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Number_Currency.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Number_Currency</fullName>
    <active>false</active>
    <label>Number - Currency</label>
</RecordType>