force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Number_Decimal.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Number_Decimal</fullName>
    <active>false</active>
    <label>Number - Decimal</label>
</RecordType>