force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Number_Percent.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Number_Percent</fullName>
    <active>false</active>
    <label>Number - Percent</label>
</RecordType>