force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Picklist.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Picklist</fullName>
    <active>false</active>
    <label>Picklist</label>
</RecordType>