force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Radio_Button.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Radio_Button</fullName>
    <active>false</active>
    <label>Radio Button</label>
</RecordType>