force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Text.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Text</fullName>
    <active>false</active>
    <label>Text</label>
</RecordType>