force-app/main/default/objects/BGCK__Question_Type__c/recordTypes/BGCK__Text_Area.recordType-meta.xml
<RecordType>
    <fullName>BGCK__Text_Area</fullName>
    <active>true</active>
    <label>Text Area</label>
</RecordType>