force-app/main/default/objects/BGCK__Question_Type__c/listViews/BGCK__All.listView-meta.xml
<ListView>
    <fullName>BGCK__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>